# DDQN-BTC

./: :w  CMakeLists.txt  README.md  \  agent.py  cpp_data.csv  data.py  env.cpp  env.h  env.py  main.cpp  main.py  memory.cpp  memory.h  memory.py  networks.py  test.py
data/: Nov_btc.csv  btc_test_data.csv  cpp_data.csv  ltc.csv
models/: _eval2_ddqn  _eval_ddqn  _train2_ddqn  _train_ddqn
